# covidcotra

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: tracer.rs
src/: auth.rs  authority.rs  contactlog.rs  crypto.rs  lib.rs  utils.rs
tests/: test_basic.rs
