[package]
name = "covidcotra"
version = "0.1.1"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"
description = "A covid-19 contract tracing experiment"
license = "Apache-2.0"
homepage = "https://github.com/mitsuhiko/covidcotra"
repository = "https://github.com/mitsuhiko/covidcotra"
documentation = "https://docs.rs/covidcotra"
keywords = ["covid-19"]

[dependencies]
sodiumoxide = { version = "0.2.5", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
pbkdf2 = { version = "0.3.0", default-features = false }
sha2 = "0.8.1"
hmac = "0.7.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_bytes = "0.11.3"
chrono = { version = "0.4.11", features = ["serde"] }
